deploy/staging/service.yml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: pfl-analytics-staging
spec:
  selector:
    app: pfl-analytics-staging
  ports:
    - port: 8501
      targetPort: 8501
      name: http
